--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <article>
                 <h2>Sobre os Integrantes</h2>
                 <div class="integrante">
-                    <img src="foto1.jpg" alt="Foto de João" class="foto">
+                    <img src="IMG/eu.jpg" alt="Foto de João" class="foto">
                     <div class="info">
-                        <h3>João Silva</h3>
-                        <p>Competências: Programação, Design Gráfico</p>
-                        <p>Experiência: 3 anos desenvolvendo sistemas web</p>
-                        <p>Escolaridade: Bacharel em Sistemas de Informação</p>
+                        <h3>DiogoLeonardo</h3>
+                        <p>Competências: Programação, Administrativo, Analista de Atendimento</p>
+                        <p>Experiência: Analista de Prevenção a Fraude</p>
+                        <p>Escolaridade: Superior Incompleto</p>
                     </div>
                 </div>
                 <div class="integrante">
