--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <article>
                 <h2>Sobre os Integrantes</h2>
                 <div class="integrante">
-                    <img src="IMG/eu.jpg" alt="Foto de Diogo" class="foto">
+                    <img src="Projeto GTI/eu.jpg" alt="Foto de Diogo" class="foto">
                     <div class="info">
                         <h3>DiogoLeonardo</h3>
                         <p>Competências: Programação, Administrativo, Analista de Atendimento</p>
@@ -44,7 +44,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Grupo X - Todos os direitos reservados.</p>
+        <p>&copy; 2024 Anonymos BR - Todos os direitos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
