--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <article>
                 <h2>Sobre os Integrantes</h2>
                 <div class="integrante">
-                    <img src="https://photos.google.com/photo/AF1QipPwkfM7ekd3I2zuth-XoXfta8bnLrbzgXhOQelT/eu.jpg" alt="Foto de Diogo" class="foto">
+                    <img src="C:\Users\diogo\OneDrive\Documentos\Área de Trabalho\fotos" alt="Foto de Diogo" class="foto">
                     <div class="info">
                         <h3>DiogoLeonardo</h3>
                         <p>Competências: Programação, Administrativo, Analista de Atendimento</p>
