--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <article>
                 <h2>Sobre os Integrantes</h2>
                 <div class="integrante">
-                    <img src="img\eu.jpg" height= "250" width= "250">
+                    <img src="img\foto1.jpg" 
                     <div class="info">
                         <h3>DiogoLeonardo</h3>
                         <p>Competências: Programação, Administrativo, Analista de Atendimento</p>
