--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <article>
                 <h2>Sobre os Integrantes</h2>
                 <div class="integrante">
-                    <img src="img\foto1.jpg" height= "250" width= "250">
+                    <img src="img\https://tmssl.akamaized.net//images/foto/galerie/pedro-flamengo-2024-1711415068-132753.jpg?lm=1711415105" height= "250" width= "250">
                     <div class="info">
                         <h3>DiogoLeonardo</h3>
                         <p>Competências: Programação, Administrativo, Analista de Atendimento</p>
