--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exposição do Grupo</title>
+    <title>Exposição - Grupo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Apresentação</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
@@ -18,33 +18,40 @@
     </header>
 
     <main>
-        <section class="perfil">
+        <section class="grupo">
+            <h1>Sobre o Grupo</h1>
+
+            <!-- João da Silva -->
             <article>
-                <h2>Sobre os Integrantes</h2>
-                <div class="integrante">
-                    <img src="img\https://tmssl.akamaized.net//images/foto/galerie/pedro-flamengo-2024-1711415068-132753.jpg?lm=1711415105" height= "250" width= "250">
-                    <div class="info">
-                        <h3>DiogoLeonardo</h3>
-                        <p>Competências: Programação, Administrativo, Analista de Atendimento</p>
-                        <p>Experiência: Analista de Prevenção a Fraude</p>
-                        <p>Escolaridade: Superior Incompleto</p>
-                    </div>
-                </div>
-                <div class="integrante">
-                    <img src="foto2.jpg" alt="Foto de Maria" class="foto">
-                    <div class="info">
-                        <h3>Maria Oliveira</h3>
-                        <p>Competências: Marketing, Redação</p>
-                        <p>Experiência: 5 anos em marketing digital</p>
-                        <p>Escolaridade: Bacharel em Comunicação Social</p>
-                    </div>
-                </div>
+                <h2>João da Silva</h2>
+                <img src="img/foto1.jpg" alt="Foto João" class="perfil">
+                <p>Competências: HTML, CSS, JavaScript</p>
+                <p>Experiência Profissional: Desenvolvedor Front-End</p>
+                <p>Escolaridade: Bacharel em Ciência da Computação</p>
+            </article>
+
+            <!-- Maria Oliveira -->
+            <article>
+                <h2>Maria Oliveira</h2>
+                <img src="img/foto2.jpg" alt="Foto Maria" class="perfil">
+                <p>Competências: Design Gráfico, UI/UX</p>
+                <p>Experiência Profissional: Designer de Interfaces</p>
+                <p>Escolaridade: Bacharel em Design Gráfico</p>
+            </article>
+
+            <!-- Carlos Souza -->
+            <article>
+                <h2>Carlos Souza</h2>
+                <img src="img/foto3.jpg" alt="Foto Carlos" class="perfil">
+                <p>Competências: PHP, MySQL, Backend</p>
+                <p>Experiência Profissional: Desenvolvedor Backend</p>
+                <p>Escolaridade: Bacharel em Engenharia de Software</p>
             </article>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Anonymos BR - Todos os direitos reservados.</p>
+        <p>&copy; 2024 Grupo de Exposição - Todos os direitos reservados</p>
     </footer>
 
     <script src="script.js"></script>
