--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
             <!-- João da Silva -->
             <article>
-                <h2>João da Silva</h2>
+                <h2>Diogo Leonardo</h2>
                 <img src="img/foto1.jpg" alt="Foto João" class="perfil">
                 <p>Competências: HTML, CSS, JavaScript</p>
-                <p>Experiência Profissional: Desenvolvedor Front-End</p>
-                <p>Escolaridade: Bacharel em Ciência da Computação</p>
+                <p>Experiência Profissional: Analista prevenção a fraude, Assisente ADM </p>
+                <p>Escolaridade: Superiot Incompleto </p>
             </article>
 
             <!-- Maria Oliveira -->
