--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <!-- João da Silva -->
             <article>
                 <h2>Diogo Leonardo</h2>
-                <img src="img/foto1.jpg" alt="Foto João" class="perfil">
+                <img src="IMG/foto1.jpg" alt="Foto João" class="perfil">
                 <p>Competências: HTML, CSS, JavaScript</p>
                 <p>Experiência Profissional: Analista prevenção a fraude, Assisente ADM </p>
-                <p>Escolaridade: Superiot Incompleto </p>
+                <p>Escolaridade: Superior Incompleto </p>
             </article>
 
             <!-- Maria Oliveira -->
