--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- João da Silva -->
             <article>
                 <h2>Diogo Leonardo</h2>
-                <img src="IMG/foto1.jpg" alt="Foto João" class="perfil">
+                <img src="IMG/foto1.jpg" >
                 <p>Competências: HTML, CSS, JavaScript</p>
                 <p>Experiência Profissional: Analista prevenção a fraude, Assisente ADM </p>
                 <p>Escolaridade: Superior Incompleto </p>
@@ -33,7 +33,7 @@
             <!-- Maria Oliveira -->
             <article>
                 <h2>Maria Oliveira</h2>
-                <img src="img/foto2.jpg" alt="Foto Maria" class="perfil">
+                <img src="img/foto2.jpg" >
                 <p>Competências: Design Gráfico, UI/UX</p>
                 <p>Experiência Profissional: Designer de Interfaces</p>
                 <p>Escolaridade: Bacharel em Design Gráfico</p>
@@ -42,7 +42,7 @@
             <!-- Carlos Souza -->
             <article>
                 <h2>Carlos Souza</h2>
-                <img src="img/foto3.jpg" alt="Foto Carlos" class="perfil">
+                <img src="img/foto3.jpg" >
                 <p>Competências: PHP, MySQL, Backend</p>
                 <p>Experiência Profissional: Desenvolvedor Backend</p>
                 <p>Escolaridade: Bacharel em Engenharia de Software</p>
