--- a/cadastro.html
+++ b/cadastro.html
@@ -3,14 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Cadastro - Grupo</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Adicionando um estilo básico para a interação */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        main {
+            max-width: 800px;
+            margin: 30px auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .cadastro h1 {
+            text-align: center;
+            color: #333;
+        }
+
+        label {
+            font-size: 1.1em;
+            margin-bottom: 5px;
+            display: block;
+            color: #333;
+        }
+
+        input[type="text"], input[type="email"], textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 1em;
+        }
+
+        textarea {
+            height: 120px;
+            resize: vertical;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            font-size: 1.1em;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        .feedback {
+            margin-top: 20px;
+            font-size: 1.2em;
+            text-align: center;
+        }
+
+        .loading {
+            display: none;
+            color: #4CAF50;
+        }
+
+        .success {
+            color: #4CAF50;
+        }
+
+        .error {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Apresentação</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
@@ -19,22 +120,66 @@
 
     <main>
         <section class="cadastro">
-            <h2>Cadastro</h2>
+            <h1>Cadastro - Fale Conosco</h1>
             <form id="formCadastro">
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome" required>
-                <label for="comentario">Comentário sobre o site:</label>
-                <textarea id="comentario" required></textarea>
-                <span id="erroComentario" style="color: red; display: none;">Por favor, insira mais de 10 caracteres.</span>
+                <input type="text" id="nome" name="nome" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="mensagem">Mensagem:</label>
+                <textarea id="mensagem" name="mensagem" required></textarea>
+
+                <label for="opiniao">O que podemos melhorar?</label>
+                <textarea id="opiniao" name="opiniao"></textarea>
+
                 <button type="submit">Enviar</button>
             </form>
+
+            <!-- Feedback de status -->
+            <div class="loading" id="loading">Enviando...</div>
+            <p id="feedback" class="feedback"></p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Grupo X - Todos os direitos reservados.</p>
+        <p>&copy; 2024 Grupo de Exposição - Todos os direitos reservados</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+        document.getElementById('formCadastro').addEventListener('submit', function (event) {
+            event.preventDefault(); // Impede o envio padrão do formulário
+
+            // Exibir o texto de carregamento enquanto o formulário é processado
+            document.getElementById('loading').style.display = 'block';
+            document.getElementById('feedback').textContent = '';
+
+            // Simula um atraso de envio
+            setTimeout(function () {
+                // Validação dos campos
+                const nome = document.getElementById('nome').value;
+                const email = document.getElementById('email').value;
+                const mensagem = document.getElementById('mensagem').value;
+                const opiniao = document.getElementById('opiniao').value;
+
+                if (!nome || !email || !mensagem) {
+                    // Se algum campo obrigatório não for preenchido
+                    document.getElementById('feedback').textContent = 'Por favor, preencha todos os campos obrigatórios.';
+                    document.getElementById('feedback').classList.add('error');
+                    document.getElementById('loading').style.display = 'none';
+                    return;
+                }
+
+                // Se tudo estiver correto, simula um envio bem-sucedido
+                document.getElementById('feedback').textContent = 'Mensagem enviada com sucesso!';
+                document.getElementById('feedback').classList.add('success');
+                document.getElementById('loading').style.display = 'none';
+
+                // Limpar o formulário após o envio
+                document.getElementById('formCadastro').reset();
+            }, 2000); // Simula o tempo de envio de 2 segundos
+        });
+    </script>
 </body>
 </html>
