--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #000000;
         }
 
         header {
@@ -84,7 +84,7 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #7FFFD4;
         }
 
         .feedback {
