--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
                 <p>Experiência Profissional: Designer de Interfaces</p>
                 <p>Escolaridade: Bacharel em Design Gráfico</p>
             </article>
+            <!-- Novo usuário adicionado -->
+            <article>
+                <h2>Carlos Souza</h2>
+                <img src="foto3.jpg" alt="Foto Carlos" class="perfil">
+                <p>Competências: Desenvolvimento Web, React, Node.js</p>
+                <p>Experiência Profissional: Desenvolvedor Full Stack</p>
+                <p>Escolaridade: Bacharel em Sistemas de Informação</p>
+            </article>
         </section>
     </main>
 
