--- a/cadastro.html
+++ b/cadastro.html
@@ -74,7 +74,7 @@
         button {
             width: 100%;
             padding: 10px;
-            background-color: #4CAF50;
+            background-color: #7FFFD4;
             border: none;
             color: white;
             font-size: 1.1em;
@@ -84,7 +84,7 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #66CDAA;
         }
 
         .feedback {
