--- a/cadastro.html
+++ b/cadastro.html
@@ -74,7 +74,7 @@
         button {
             width: 100%;
             padding: 10px;
-            background-color: #7FFFD4;
+            background-color: #66CDAA;
             border: none;
             color: white;
             font-size: 1.1em;
