--- a/galeria.html
+++ b/galeria.html
@@ -3,14 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria de Imagens</title>
+    <title>Galeria - Grupo</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Estilo básico */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #000; /* Fundo preto */
+            margin: 0;
+            padding: 0;
+            color: white;
+        }
+
+        header {
+            background-color: #333; /* Cor do cabeçalho */
+            padding: 15px 0;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 20px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.2em;
+            text-transform: uppercase;
+            transition: color 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            color: #FFD700; /* Cor dourada de destaque */
+        }
+
+        main {
+            max-width: 1200px;
+            margin: 30px auto;
+            padding: 20px;
+        }
+
+        .galeria {
+            text-align: center;
+        }
+
+        .galeria h1 {
+            font-size: 3em;
+            margin-bottom: 40px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        .cards {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        .card {
+            background-color: #222;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 8px;
+            transition: transform 0.3s ease;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
+        }
+
+        .card:hover img {
+            transform: scale(1.1);
+        }
+
+        .card p {
+            font-size: 1.1em;
+            color: #FFD700; /* Texto dourado */
+            margin-top: 15px;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+    </style>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Apresentação</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
@@ -19,26 +126,26 @@
 
     <main>
         <section class="galeria">
-            <h2>Galeria de Imagens</h2>
-            <div class="card">
-                <img src="interesse1.jpg" alt="Imagem 1">
-                <div class="descricao">
-                    <h3>Filmes Favoritos</h3>
-                    <p>Aqui estão alguns dos filmes que mais gosto de assistir!</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="interesse2.jpg" alt="Imagem 2">
-                <div class="descricao">
-                    <h3>Jogos que Adoro</h3>
-                    <p>Esses jogos são os meus favoritos no momento.</p>
-                </div>
+            <h1>Galeria de Imagens</h1>
+            <div class="cards">
+                <article class="card">
+                    <img src="foto_g1.jpg" alt="Imagem 1">
+                    <p>Interesse: Filmes</p>
+                </article>
+                <article class="card">
+                    <img src="foto_g2.jpg" alt="Imagem 2">
+                    <p>Interesse: Jogos</p>
+                </article>
+                <article class="card">
+                    <img src="foto_g3.jpg" alt="Imagem 3">
+                    <p>Interesse: Música</p>
+                </article>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Grupo X - Todos os direitos reservados.</p>
+        <p>&copy; 2024 Grupo de Exposição - Todos os direitos reservados</p>
     </footer>
 
     <script src="script.js"></script>
