--- a/galeria.html
+++ b/galeria.html
@@ -129,16 +129,16 @@
             <h1>Galeria de Imagens</h1>
             <div class="cards">
                 <article class="card">
-                    <img src="foto_g1.jpg" alt="Imagem 1">
-                    <p>Interesse: Filmes</p>
+                    <img src="foto_g1.jpg" alt="Suits">
+                    <p>Interesse: Série</p>
                 </article>
                 <article class="card">
-                    <img src="foto_g2.jpg" alt="Imagem 2">
+                    <img src="foto_g2.jpg" alt="Suits2">
                     <p>Interesse: Jogos</p>
                 </article>
                 <article class="card">
-                    <img src="foto_g3.jpg" alt="Imagem 3">
-                    <p>Interesse: Música</p>
+                    <img src="foto_g3.jpg" alt="Suits3">
+                    <p>Interesse: Futebol</p>
                 </article>
             </div>
         </section>
