--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
         <section class="grupo">
             <h1>Sobre o Grupo</h1>
             <article>
-                <h2>João da Silva</h2>
+                <h2>Diogo Leonardo</h2>
                 <img src="foto1.jpg" alt="Foto João" class="perfil">
-                <p>Competências: HTML, CSS, JavaScript</p>
-                <p>Experiência Profissional: Desenvolvedor Front-End</p>
-                <p>Escolaridade: Bacharel em Ciência da Computação</p>
+                <p>Competências: Desenvolvimento Web </p>
+                <p>Experiência Profissional: Analista de Prevenção a fraude, Assistente ADM </p>
+                <p>Escolaridade: Superior Incompleto </p>
             </article>
             <article>
                 <h2>Maria Oliveira</h2>
