--- a/galeria.html
+++ b/galeria.html
@@ -129,7 +129,7 @@
             <h1>Galeria de Imagens</h1>
             <div class="cards">
                 <article class="card">
-                    <img src="foto_g1.jpg" alt="Suits">
+                    <img src="Suits.png" alt="Suits">
                     <p>Interesse: Série</p>
                 </article>
                 <article class="card">
