--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </article>
             <article>
                 <h2>Maria Oliveira</h2>
-                <img src="foto2.jpg" alt="Foto Maria" class="perfil">
+                <img src="Maria.png" alt="Foto Maria" class="perfil">
                 <p>Competências: Design Gráfico, UI/UX</p>
                 <p>Experiência Profissional: Designer de Interfaces</p>
                 <p>Escolaridade: Bacharel em Design Gráfico</p>
@@ -132,7 +132,7 @@
             <!-- Novo usuário adicionado -->
             <article>
                 <h2>Carlos Souza</h2>
-                <img src="foto3.jpg" alt="Foto Carlos" class="perfil">
+                <img src="Carlos.png" alt="Foto Carlos" class="perfil">
                 <p>Competências: Desenvolvimento Web, React, Node.js</p>
                 <p>Experiência Profissional: Desenvolvedor Full Stack</p>
                 <p>Escolaridade: Bacharel em Sistemas de Informação</p>
