--- a/galeria.html
+++ b/galeria.html
@@ -129,15 +129,15 @@
             <h1>Galeria de Imagens</h1>
             <div class="cards">
                 <article class="card">
-                    <img src="Suits.png" width="250" height="250">
+                    <img src="Suits2.png" width="250" height="250">
                     <p>Interesse: Série</p>
                 </article>
                 <article class="card">
-                    <img src="foto_g2.jpg" alt="Suits2">
+                    <img src="Fps.png" alt="Suits2">
                     <p>Interesse: Jogos</p>
                 </article>
                 <article class="card">
-                    <img src="foto_g3.jpg" alt="Suits3">
+                    <img src="Estádio.png" alt="Suits3">
                     <p>Interesse: Futebol</p>
                 </article>
             </div>
